--- a/0-k8s安装.md
+++ b/0-k8s安装.md
@@ -14,10 +14,34 @@
 
 ## 固定IP
 
-x
+   
+    cd /etc/sysconfig/network-scripts 
+   
+   vi 网卡名对应的文件
+   填入：
+
+    BOOTPROTO="static"         # 使用静态IP地址，默认为dhcp
+    IPADDR="192.168.241.100"   # 设置的静态IP地址
+    NETMASK="255.255.255.0"    # 子网掩码
+    GATEWAY="192.168.241.2"    # 网关地址
+    DNS1="192.168.241.2"       # DNS服务器
+
+最后
+
+    service network restart
 
 ## 安装K8s
 
     教程推荐：https://www.kuboard.cn/install/install-dashboard.html
 
 
+## docker加速
+
+    sudo mkdir -p /etc/docker
+    sudo tee /etc/docker/daemon.json <<-'EOF'
+    {
+    "registry-mirrors": ["https://0wwu387z.mirror.aliyuncs.com"]
+    }
+    EOF
+    sudo systemctl daemon-reload
+    sudo systemctl restart docker
