--- a/0-k8s安装.md
+++ b/0-k8s安装.md
@@ -45,3 +45,7 @@
     EOF
     sudo systemctl daemon-reload
     sudo systemctl restart docker
+
+## 获取join参数
+
+    kubeadm token create --print-join-command
