--- a/0-k8s安装.md
+++ b/0-k8s安装.md
@@ -1,3 +1,9 @@
+------
+
+[TOC]
+
+------
+
 # 安装
 
 这里使用windows环境下的3台虚拟机，搭建单master的集群
@@ -14,9 +20,9 @@
 
 ## 固定IP
 
-   
+
     cd /etc/sysconfig/network-scripts 
-   
+
    vi 网卡名对应的文件
    填入：
 
