--- a/3-调度.md
+++ b/3-调度.md
@@ -119,15 +119,49 @@ Pod调度时，由于节点的属性导致影响调度策略
 
 设置节点的taint，节点不再参与普通的分配调度。如设置专用节点。
 
-### 查看节点污点情况
+### 污点值——NoSchedule,PreferNoSchedule,NoExecute
+
+- NoSchedule:一定不参与调度
+- PreferNoSchedule：尽量不参与调度
+- NoExecute：不参与调度，且还驱逐Node中已有Pod
+
+#### 查看节点污点情况
 
 ```shell
 kubectl describe node [node_name] | grep Taints
 ```
 
-给节点打污点
+#### 给节点打污点
 
 ```shell
 kubectl taint node [node_name] [key]=[value]:NoSchedle
 ```
 
+```shel
+kubectl create deployment web --iamge=ngnix
+kubectl scale deployment web --replicas=5
+```
+
+#### 删除污点
+
+```shell
+kubectl taint node [node_name] [key]:NoSchedle-
+```
+
+ ### 污点容忍
+
+Pod可以通过设置污点容忍，强行调度到污点节点
+
+```yaml
+spec:
+  tolerations:
+  - key: "key"
+  oprator: "Equal"
+  value: "value"
+  effect: "NoSchedule"
+  containers:
+```
+
+
+
+ 
